🎯 add pest, test for articles & add ArticleFactory
